dnl
dnl Process this file with autoconf to produce a configure script.
dnl
dnl TinyMUCK fb5.x auto-config script writen by: Peter "WhiteFire" Torkelson
dnl
AC_REVISION($Revision: 1.1 $)dnl
AC_INIT(game.c)
AC_CONFIG_HEADER(../include/autoconf.h)
echo " "
echo "TinyMUCK fb5.x auto-configure script."
echo " "
echo "This script will try and determine things about your system so"
echo "that FB can compile correctly. This will create your Makefile"
echo "and the header file autoconf.h in the include directory."
echo " "

dnl
dnl Find the compiler first.
dnl
AC_PROG_CC
AC_PROG_CPP

dnl
dnl Specific systems tests.
dnl
AC_ISC_POSIX
AC_MINIX

dnl
dnl Header files
dnl
AC_HAVE_HEADERS(malloc.h memory.h string.h unistd.h sys/resource.h sys/signal.h)
AC_HAVE_HEADERS(sys/time.h)
AC_STDC_HEADERS
AC_DIR_HEADER
AC_TIME_WITH_SYS_TIME
echo "Checking for tm_gmtoff"
AC_HEADER_EGREP([^_a-zA-Z]tm_gmtoff;, time.h, AC_DEFINE(HAVE_TM_GMTOFF))
AC_HEADER_EGREP([^_a-zA-Z]tm_gmtoff;, sys/time.h, AC_DEFINE(HAVE_SYS_TM_GMTOFF))

dnl
dnl Libraries and functions.
dnl
AC_HAVE_LIBRARY(m, [LIBS="$LIBS -lm"])
AC_HAVE_LIBRARY(socket, [LIBS="$LIBS -lsocket"])
AC_HAVE_LIBRARY(nsl, [LIBS="$LIBS -lnsl"])
AC_VPRINTF
AC_HAVE_FUNCS(mallinfo getrlimit getrusage random)

dnl
dnl Types and structures
dnl
AC_PID_T
AC_SIZE_T
AC_RETSIGTYPE
AC_TIMEZONE

dnl
dnl Compiler characteristics
dnl
AC_CONST
AC_INLINE

dnl
dnl Uname -a, just becuse.
dnl
echo "Checking value of uname -a"
AC_DEFINE_UNQUOTED(UNAME_VALUE, \"`uname -a`\")

dnl
dnl An in the end, there was no more.
dnl
AC_OUTPUT(Makefile)
echo " "
echo "You should review the options in ../include/config.h, and"
echo "then type make to build your system."
echo " "
